Tue Dec  1 09:35:29 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add a few comment.

Tue Dec  1 09:31:19 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add disabling optimization on gcc.

Tue Dec  1 07:50:33 2015  Eric Wong  <e@80x24.org>

	* missing/explicit_bzero.c: new file. define explicit_bzero.
	  Fixup r52806

Thu Oct 22 12:54:43 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (register_ubf_list): renamed from
	  add_signal_thread_list.
	* thread_pthread.c (unregister_ubf_list): renamed
	  from remove_signal_thread_list.
	* thread_pthread.c (ubf_wakeup_all_threads): renamed from
	  ping_signal_thread_list.
	* thread_pthread.c (ubf_wakeup_thread): renamed from
	  ubf_select_each.
	* thread_pthread.c (ubf_threads_empty): renamed from
	  check_signal_thread_list().
	* thread_pthread.c (ubf_list_lock): renamed from
	  signal_thread_list_lock.

	* thread_pthread.c (register_ubf_list): large simplification
	  by using ccan/list.h.
	  bonus: removed malloc() and exit(EXIT_FAILURE).
	* thread_pthread.c (unregister_ubf_list): ditto.
	* thread_pthread.c (ubf_threads_empty): ditto.
	* thread_pthread.c (ubf_wakeup_all_threads): ditto.

	* thread_pthread.c (print_signal_list): removed.

Thu Oct 22 08:03:49 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_rand.rb (TestRand#test_default_seed): add
	  srand case.

Thu Oct 22 06:33:38 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (InitVM_Random): move Random::DEFAULT initialization
	  bits to Init_Random_default.
	* random.c (Init_Random_default): renamed from Init_Rndom2.
	* random.c (Init_RandomSeedCore): renamed from Init_Random.

Thu Oct 22 06:20:48 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (Init_RandomSeed): move all Random::DEFAULT
	  construction bits to Init_RandomSeed2. Random::DEFAULT
	  and Ruby internal hashes are no longer shared their seed.